fix: 🐛 Add padding top on body to prevent menu overlapping

--- a/src/assets/scss/includes/_globals.scss
+++ b/src/assets/scss/includes/_globals.scss
@@ -4,6 +4,8 @@
 }
 
 body {
+  padding-top: $nav-height-small;
+
   @include breakpoint-above-tablet {
     padding-top: $nav-height-big;
   }
